--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^17.0.2",
     "react-elastic-carousel": "^0.11.5",
     "react-router-dom": "^6.2.2",
-    "sass": "^1.49.9"
+    "sass": "^1.49.9",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
